CSS dark mode fix

--- a/modules/Matches.module.scss
+++ b/modules/Matches.module.scss
@@ -31,4 +31,6 @@
   }
 }
 
-
+html[data-theme="dark"] .container > div {
+  background-color: #333;
+}
